--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.conditionalrangefillupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.conditionalrangefillupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFillUpdateData:interface'
-    summary: '<span data-ttu-id="74e45-101">一个用于更新 ConditionalRangeFill 对象上的数据的接口，可用于`conditionalRangeFill.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="74e45-101">An interface for updating data on the ConditionalRangeFill object, for use in `conditionalRangeFill.set({ ... })`</span></span><!-- --><span data-ttu-id="74e45-102">.</span><span class="sxs-lookup"><span data-stu-id="74e45-102"></span></span>'
+    summary: '一个用于更新 ConditionalRangeFill 对象上的数据的接口，可用于`conditionalRangeFill.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ConditionalRangeFillUpdateData
     fullName: Excel.Interfaces.ConditionalRangeFillUpdateData
     langs:
