--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.presetcriteriaconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.presetcriteriaconditionalformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PresetCriteriaConditionalFormatUpdateData:interface'
-    summary: '<span data-ttu-id="9b213-101">一个用于更新 PresetCriteriaConditionalFormat 对象上的数据的接口，可用于`presetCriteriaConditionalFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="9b213-101">An interface for updating data on the PresetCriteriaConditionalFormat object, for use in `presetCriteriaConditionalFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="9b213-102">.</span><span class="sxs-lookup"><span data-stu-id="9b213-102"></span></span>'
+    summary: '一个用于更新 PresetCriteriaConditionalFormat 对象上的数据的接口，可用于`presetCriteriaConditionalFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.PresetCriteriaConditionalFormatUpdateData
     fullName: Excel.Interfaces.PresetCriteriaConditionalFormatUpdateData
     langs:
