--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.cellpropertiesformat.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.cellpropertiesformat.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.CellPropertiesFormat:interface'
     summary: |-
-      <span data-ttu-id="dd493-101">表示 getCellProperties 的返回格式属性或 setCellProperties 的格式输入参数。</span><span class="sxs-lookup"><span data-stu-id="dd493-101">Represents the returned format properties of getCellProperties or format input parameter of setCellProperties.</span></span>
+      表示 getCellProperties 的返回格式属性或 setCellProperties 的格式输入参数。
 
-      <span data-ttu-id="dd493-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd493-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.CellPropertiesFormat
     fullName: Excel.CellPropertiesFormat
     langs:
@@ -28,9 +28,9 @@ items:
       - 'excel!Excel.CellPropertiesFormat#wrapText:member'
   - uid: 'excel!Excel.CellPropertiesFormat#autoIndent:member'
     summary: |-
-      <span data-ttu-id="dd493-103">表示`autoIndent`属性。</span><span class="sxs-lookup"><span data-stu-id="dd493-103">Represents the `autoIndent` property.</span></span>
+      表示`autoIndent`属性。
 
-      <span data-ttu-id="dd493-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd493-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoIndent
     fullName: autoIndent
     langs:
@@ -43,9 +43,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFormat#borders:member'
     summary: |-
-      <span data-ttu-id="dd493-105">表示`borders`属性。</span><span class="sxs-lookup"><span data-stu-id="dd493-105">Represents the `borders` property.</span></span>
+      表示`borders`属性。
 
-      <span data-ttu-id="dd493-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd493-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borders
     fullName: borders
     langs:
@@ -58,9 +58,9 @@ items:
           - 'excel!Excel.CellBorderCollection:interface'
   - uid: 'excel!Excel.CellPropertiesFormat#fill:member'
     summary: |-
-      <span data-ttu-id="dd493-107">表示`fill`属性。</span><span class="sxs-lookup"><span data-stu-id="dd493-107">Represents the `fill` property.</span></span>
+      表示`fill`属性。
 
-      <span data-ttu-id="dd493-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd493-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -73,9 +73,9 @@ items:
           - 'excel!Excel.CellPropertiesFill:interface'
   - uid: 'excel!Excel.CellPropertiesFormat#font:member'
     summary: |-
-      <span data-ttu-id="dd493-109">表示`font`属性。</span><span class="sxs-lookup"><span data-stu-id="dd493-109">Represents the `font` property.</span></span>
+      表示`font`属性。
 
-      <span data-ttu-id="dd493-110">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd493-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -88,9 +88,9 @@ items:
           - 'excel!Excel.CellPropertiesFont:interface'
   - uid: 'excel!Excel.CellPropertiesFormat#horizontalAlignment:member'
     summary: |-
-      <span data-ttu-id="dd493-111">表示`horizontalAlignment`属性。</span><span class="sxs-lookup"><span data-stu-id="dd493-111">Represents the `horizontalAlignment` property.</span></span>
+      表示`horizontalAlignment`属性。
 
-      <span data-ttu-id="dd493-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd493-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
     fullName: horizontalAlignment
     langs:
@@ -103,9 +103,9 @@ items:
           - 'excel!Excel.CellPropertiesFormat#horizontalAlignment~0:complex'
   - uid: 'excel!Excel.CellPropertiesFormat#indentLevel:member'
     summary: |-
-      <span data-ttu-id="dd493-113">表示`indentLevel`属性。</span><span class="sxs-lookup"><span data-stu-id="dd493-113">Represents the `indentLevel` property.</span></span>
+      表示`indentLevel`属性。
 
-      <span data-ttu-id="dd493-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd493-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: indentLevel
     fullName: indentLevel
     langs:
@@ -118,9 +118,9 @@ items:
           - number
   - uid: 'excel!Excel.CellPropertiesFormat#protection:member'
     summary: |-
-      <span data-ttu-id="dd493-115">表示`protection`属性。</span><span class="sxs-lookup"><span data-stu-id="dd493-115">Represents the `protection` property.</span></span>
+      表示`protection`属性。
 
-      <span data-ttu-id="dd493-116">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd493-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
     fullName: protection
     langs:
@@ -133,9 +133,9 @@ items:
           - 'excel!Excel.CellPropertiesProtection:interface'
   - uid: 'excel!Excel.CellPropertiesFormat#readingOrder:member'
     summary: |-
-      <span data-ttu-id="dd493-117">表示`readingOrder`属性。</span><span class="sxs-lookup"><span data-stu-id="dd493-117">Represents the `readingOrder` property.</span></span>
+      表示`readingOrder`属性。
 
-      <span data-ttu-id="dd493-118">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd493-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readingOrder
     fullName: readingOrder
     langs:
@@ -148,9 +148,9 @@ items:
           - 'excel!Excel.CellPropertiesFormat#readingOrder~0:complex'
   - uid: 'excel!Excel.CellPropertiesFormat#shrinkToFit:member'
     summary: |-
-      <span data-ttu-id="dd493-119">表示`shrinkToFit`属性。</span><span class="sxs-lookup"><span data-stu-id="dd493-119">Represents the `shrinkToFit` property.</span></span>
+      表示`shrinkToFit`属性。
 
-      <span data-ttu-id="dd493-120">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd493-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shrinkToFit
     fullName: shrinkToFit
     langs:
@@ -163,9 +163,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFormat#textOrientation:member'
     summary: |-
-      <span data-ttu-id="dd493-121">表示`textOrientation`属性。</span><span class="sxs-lookup"><span data-stu-id="dd493-121">Represents the `textOrientation` property.</span></span>
+      表示`textOrientation`属性。
 
-      <span data-ttu-id="dd493-122">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd493-122">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textOrientation
     fullName: textOrientation
     langs:
@@ -178,9 +178,9 @@ items:
           - number
   - uid: 'excel!Excel.CellPropertiesFormat#useStandardHeight:member'
     summary: |-
-      <span data-ttu-id="dd493-123">表示`useStandardHeight`属性。</span><span class="sxs-lookup"><span data-stu-id="dd493-123">Represents the `useStandardHeight` property.</span></span>
+      表示`useStandardHeight`属性。
 
-      <span data-ttu-id="dd493-124">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd493-124">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useStandardHeight
     fullName: useStandardHeight
     langs:
@@ -193,9 +193,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFormat#useStandardWidth:member'
     summary: |-
-      <span data-ttu-id="dd493-125">表示`useStandardWidth`属性。</span><span class="sxs-lookup"><span data-stu-id="dd493-125">Represents the `useStandardWidth` property.</span></span>
+      表示`useStandardWidth`属性。
 
-      <span data-ttu-id="dd493-126">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd493-126">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useStandardWidth
     fullName: useStandardWidth
     langs:
@@ -208,9 +208,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFormat#verticalAlignment:member'
     summary: |-
-      <span data-ttu-id="dd493-127">表示`verticalAlignment`属性。</span><span class="sxs-lookup"><span data-stu-id="dd493-127">Represents the `verticalAlignment` property.</span></span>
+      表示`verticalAlignment`属性。
 
-      <span data-ttu-id="dd493-128">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd493-128">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
     fullName: verticalAlignment
     langs:
@@ -223,9 +223,9 @@ items:
           - 'excel!Excel.CellPropertiesFormat#verticalAlignment~0:complex'
   - uid: 'excel!Excel.CellPropertiesFormat#wrapText:member'
     summary: |-
-      <span data-ttu-id="dd493-129">表示`wrapText`属性。</span><span class="sxs-lookup"><span data-stu-id="dd493-129">Represents the `wrapText` property.</span></span>
+      表示`wrapText`属性。
 
-      <span data-ttu-id="dd493-130">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd493-130">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: wrapText
     fullName: wrapText
     langs:
