--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.cellpropertiesformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.cellpropertiesformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.CellPropertiesFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="2ef94-101">表示要在 format 对象上加载的属性。</span><span class="sxs-lookup"><span data-stu-id="2ef94-101">Represents which properties to load on the format object.</span></span>
+      表示要在 format 对象上加载的属性。
 
-      <span data-ttu-id="2ef94-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ef94-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.CellPropertiesFormatLoadOptions
     fullName: Excel.CellPropertiesFormatLoadOptions
     langs:
@@ -28,9 +28,9 @@ items:
       - 'excel!Excel.CellPropertiesFormatLoadOptions#wrapText:member'
   - uid: 'excel!Excel.CellPropertiesFormatLoadOptions#autoIndent:member'
     summary: |-
-      <span data-ttu-id="2ef94-103">指定是否在`autoIndent`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="2ef94-103">Specifies whether to load on the `autoIndent` property.</span></span>
+      指定是否在属性上进行加载 `autoIndent` 。
 
-      <span data-ttu-id="2ef94-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ef94-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoIndent
     fullName: autoIndent
     langs:
@@ -43,9 +43,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFormatLoadOptions#borders:member'
     summary: |-
-      <span data-ttu-id="2ef94-105">指定是否在`borders`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="2ef94-105">Specifies whether to load on the `borders` property.</span></span>
+      指定是否在属性上进行加载 `borders` 。
 
-      <span data-ttu-id="2ef94-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ef94-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borders
     fullName: borders
     langs:
@@ -58,9 +58,9 @@ items:
           - 'excel!Excel.CellPropertiesBorderLoadOptions:interface'
   - uid: 'excel!Excel.CellPropertiesFormatLoadOptions#fill:member'
     summary: |-
-      <span data-ttu-id="2ef94-107">指定是否在`fill`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="2ef94-107">Specifies whether to load on the `fill` property.</span></span>
+      指定是否在属性上进行加载 `fill` 。
 
-      <span data-ttu-id="2ef94-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ef94-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -73,9 +73,9 @@ items:
           - 'excel!Excel.CellPropertiesFillLoadOptions:interface'
   - uid: 'excel!Excel.CellPropertiesFormatLoadOptions#font:member'
     summary: |-
-      <span data-ttu-id="2ef94-109">指定是否在`font`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="2ef94-109">Specifies whether to load on the `font` property.</span></span>
+      指定是否在属性上进行加载 `font` 。
 
-      <span data-ttu-id="2ef94-110">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ef94-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -88,9 +88,9 @@ items:
           - 'excel!Excel.CellPropertiesFontLoadOptions:interface'
   - uid: 'excel!Excel.CellPropertiesFormatLoadOptions#horizontalAlignment:member'
     summary: |-
-      <span data-ttu-id="2ef94-111">指定是否在`horizontalAlignment`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="2ef94-111">Specifies whether to load on the `horizontalAlignment` property.</span></span>
+      指定是否在属性上进行加载 `horizontalAlignment` 。
 
-      <span data-ttu-id="2ef94-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ef94-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
     fullName: horizontalAlignment
     langs:
@@ -103,9 +103,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFormatLoadOptions#indentLevel:member'
     summary: |-
-      <span data-ttu-id="2ef94-113">指定是否在`indentLevel`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="2ef94-113">Specifies whether to load on the `indentLevel` property.</span></span>
+      指定是否在属性上进行加载 `indentLevel` 。
 
-      <span data-ttu-id="2ef94-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ef94-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: indentLevel
     fullName: indentLevel
     langs:
@@ -118,9 +118,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFormatLoadOptions#protection:member'
     summary: |-
-      <span data-ttu-id="2ef94-115">指定是否在`protection`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="2ef94-115">Specifies whether to load on the `protection` property.</span></span>
+      指定是否在属性上进行加载 `protection` 。
 
-      <span data-ttu-id="2ef94-116">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ef94-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
     fullName: protection
     langs:
@@ -133,9 +133,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFormatLoadOptions#readingOrder:member'
     summary: |-
-      <span data-ttu-id="2ef94-117">指定是否在`readingOrder`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="2ef94-117">Specifies whether to load on the `readingOrder` property.</span></span>
+      指定是否在属性上进行加载 `readingOrder` 。
 
-      <span data-ttu-id="2ef94-118">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ef94-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readingOrder
     fullName: readingOrder
     langs:
@@ -148,9 +148,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFormatLoadOptions#shrinkToFit:member'
     summary: |-
-      <span data-ttu-id="2ef94-119">指定是否在`shrinkToFit`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="2ef94-119">Specifies whether to load on the `shrinkToFit` property.</span></span>
+      指定是否在属性上进行加载 `shrinkToFit` 。
 
-      <span data-ttu-id="2ef94-120">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ef94-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shrinkToFit
     fullName: shrinkToFit
     langs:
@@ -163,9 +163,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFormatLoadOptions#textOrientation:member'
     summary: |-
-      <span data-ttu-id="2ef94-121">指定是否在`textOrientation`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="2ef94-121">Specifies whether to load on the `textOrientation` property.</span></span>
+      指定是否在属性上进行加载 `textOrientation` 。
 
-      <span data-ttu-id="2ef94-122">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ef94-122">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textOrientation
     fullName: textOrientation
     langs:
@@ -178,9 +178,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFormatLoadOptions#useStandardHeight:member'
     summary: |-
-      <span data-ttu-id="2ef94-123">指定是否在`useStandardHeight`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="2ef94-123">Specifies whether to load on the `useStandardHeight` property.</span></span>
+      指定是否在属性上进行加载 `useStandardHeight` 。
 
-      <span data-ttu-id="2ef94-124">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ef94-124">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useStandardHeight
     fullName: useStandardHeight
     langs:
@@ -193,9 +193,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFormatLoadOptions#useStandardWidth:member'
     summary: |-
-      <span data-ttu-id="2ef94-125">指定是否在`useStandardWidth`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="2ef94-125">Specifies whether to load on the `useStandardWidth` property.</span></span>
+      指定是否在属性上进行加载 `useStandardWidth` 。
 
-      <span data-ttu-id="2ef94-126">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ef94-126">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useStandardWidth
     fullName: useStandardWidth
     langs:
@@ -208,9 +208,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFormatLoadOptions#verticalAlignment:member'
     summary: |-
-      <span data-ttu-id="2ef94-127">指定是否在`verticalAlignment`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="2ef94-127">Specifies whether to load on the `verticalAlignment` property.</span></span>
+      指定是否在属性上进行加载 `verticalAlignment` 。
 
-      <span data-ttu-id="2ef94-128">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ef94-128">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
     fullName: verticalAlignment
     langs:
@@ -223,9 +223,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CellPropertiesFormatLoadOptions#wrapText:member'
     summary: |-
-      <span data-ttu-id="2ef94-129">指定是否在`wrapText`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="2ef94-129">Specifies whether to load on the `wrapText` property.</span></span>
+      指定是否在属性上进行加载 `wrapText` 。
 
-      <span data-ttu-id="2ef94-130">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ef94-130">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: wrapText
     fullName: wrapText
     langs:
