--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.changedeventdetail.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.changedeventdetail.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ChangedEventDetail:interface'
     summary: |-
-      <span data-ttu-id="c4b98-101">提供有关 WorksheetChangedEvent/TableChangedEvent 的详细信息</span><span class="sxs-lookup"><span data-stu-id="c4b98-101">Provide information about the detail of WorksheetChangedEvent/TableChangedEvent</span></span>
+      提供有关 WorksheetChangedEvent/TableChangedEvent 的详细信息
 
-      <span data-ttu-id="c4b98-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c4b98-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChangedEventDetail
     fullName: Excel.ChangedEventDetail
     langs:
@@ -18,9 +18,9 @@ items:
       - 'excel!Excel.ChangedEventDetail#valueTypeBefore:member'
   - uid: 'excel!Excel.ChangedEventDetail#valueAfter:member'
     summary: |-
-      <span data-ttu-id="c4b98-103">表示更改之后的值。</span><span class="sxs-lookup"><span data-stu-id="c4b98-103">Represents the value after changed.</span></span> <span data-ttu-id="c4b98-104">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="c4b98-104">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="c4b98-105">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="c4b98-105">Cells that contain an error will return the error string.</span></span>
+      表示更改之后的值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      <span data-ttu-id="c4b98-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c4b98-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueAfter
     fullName: valueAfter
     langs:
@@ -33,9 +33,9 @@ items:
           - any
   - uid: 'excel!Excel.ChangedEventDetail#valueBefore:member'
     summary: |-
-      <span data-ttu-id="c4b98-107">表示更改之前的值。</span><span class="sxs-lookup"><span data-stu-id="c4b98-107">Represents the value before changed.</span></span> <span data-ttu-id="c4b98-108">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="c4b98-108">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="c4b98-109">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="c4b98-109">Cells that contain an error will return the error string.</span></span>
+      表示更改之前的值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      <span data-ttu-id="c4b98-110">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c4b98-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueBefore
     fullName: valueBefore
     langs:
@@ -48,9 +48,9 @@ items:
           - any
   - uid: 'excel!Excel.ChangedEventDetail#valueTypeAfter:member'
     summary: |-
-      <span data-ttu-id="c4b98-111">表示更改之后的值类型。</span><span class="sxs-lookup"><span data-stu-id="c4b98-111">Represents the type of value after changed</span></span>
+      表示更改之后的值类型。
 
-      <span data-ttu-id="c4b98-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c4b98-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueTypeAfter
     fullName: valueTypeAfter
     langs:
@@ -63,9 +63,9 @@ items:
           - 'excel!Excel.ChangedEventDetail#valueTypeAfter~0:complex'
   - uid: 'excel!Excel.ChangedEventDetail#valueTypeBefore:member'
     summary: |-
-      <span data-ttu-id="c4b98-113">表示更改之前的值类型。</span><span class="sxs-lookup"><span data-stu-id="c4b98-113">Represents the type of value before changed</span></span>
+      表示更改之前的值类型。
 
-      <span data-ttu-id="c4b98-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c4b98-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueTypeBefore
     fullName: valueTypeBefore
     langs:
